--- a/irrigreatapp/templates/headNav.html
+++ b/irrigreatapp/templates/headNav.html
@@ -187,7 +187,7 @@ body {
                         <circle cx="8.5" cy="8.5" r="1.5"></circle>
                         <polyline points="21 15 16 10 5 21"></polyline>
                     </svg>
-                    <a class="pt-1px d-none d-md-block" href="#">Photos</a>
+                    <a class="pt-1px d-none d-md-block" href='/irrigreatapp/edit_Profile/profile'>Edit Profile</a>
                 </li>
                 <li class="header-link-item ml-3 pl-3 d-flex align-items-center" style="min-width:12rem;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
