--- a/merchantapp/templates/placeorder.html
+++ b/merchantapp/templates/placeorder.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="col-md-6">
                     <label class="form-label">Name</label>
-                    <input type="text" class="form-control" value="{{merchantName}}" readonly name="customer">
+                    <input type="text" class="form-control" value="{{merchantName.name}}" readonly name="customer">
                 </div>
                 <div class="col-12">
                     <label class="form-label">Address</label>
